@@ -3,7 +3,7 @@ dnl glew.m4
 dnl 
 dnl This file is part of CVL, a computer vision library.
 dnl
-dnl Copyright (C) 2007, 2008  Martin Lambers <marlam@marlam.de>
+dnl Copyright (C) 2007, 2008, 2009  Martin Lambers <marlam@marlam.de>
 dnl
 dnl   This program is free software; you can redistribute it and/or modify
 dnl   it under the terms of the GNU General Public License as published by
@@ -24,35 +24,32 @@ dnl thus
 dnl - provides a --with-libglew-prefix option for the configure script
 dnl - sets the HAVE_LIBGLEW and LIBGLEW/LTLIBGLEW variables
 dnl - augments the CPPFLAGS variable. 
-dnl If GLEW is not found, this macro exits with an error message.
+dnl Test HAVE_LIBGLEW to see if libglew was found.
 
 AC_DEFUN([AM_GLEW],
 [
-AC_REQUIRE([AC_CANONICAL_SYSTEM])
-case "${target}" in
-*-*-mingw32*)
-	AC_DEFINE([GLEW_STATIC], [1], [Use static GLEW on W32.])
-	AC_LIB_FROMPACKAGE([glew32s], [libglew])
-	AC_LIB_HAVE_LINKFLAGS([glew32s], [gdi32 glu32 opengl32], 
-	  [#define GLEW_STATIC 1
-	   #include <GL/glew.h>],
-	  [GLEW_VERSION_2_1])
-	if test "$HAVE_LIBGLEW32S" != "yes"; then
-		AC_MSG_ERROR([could not find GLEW >= 1.3.5])
-	else
-		HAVE_LIBGLEW=1
+	AC_REQUIRE([AC_CANONICAL_SYSTEM])
+	AC_LANG([C])
+	case "${target}" in
+	*-*-mingw32*)
+		AC_DEFINE([GLEW_STATIC], [1], [Use static GLEW on W32.])
+		AC_LIB_FROMPACKAGE([glew32s], [libglew])
+		AC_LIB_HAVE_LINKFLAGS([glew32s], [], 
+		  [#define GLEW_STATIC 1
+		   #include <GL/glew.h>],
+		  [GLEW_VERSION_2_1])
+		HAVE_LIBGLEW="$HAVE_LIBGLEW32S"
 		AC_SUBST([HAVE_LIBGLEW])
-		LIBGLEW="$LIBGLEW32S"
-		AC_SUBST([LIBGLEW])
-		LTLIBGLEW="$LTLIBGLEW32S"
-		AC_SUBST([LTLIBGLEW])
-	fi
-	;; 
-*) 
-	AC_LIB_HAVE_LINKFLAGS([GLEW], [GLU GL], [#include <GL/glew.h>], [GLEW_VERSION_2_1])
-	if test "$HAVE_LIBGLEW" != "yes"; then
-		AC_MSG_ERROR([could not find GLEW >= 1.3.5])
-	fi
-	;; 
-esac
+		if test "$HAVE_LIBGLEW" = "yes"; then
+			LIBGLEW="$LIBGLEW32S"
+			AC_SUBST([LIBGLEW])
+			LTLIBGLEW="$LTLIBGLEW32S"
+			AC_SUBST([LTLIBGLEW])
+		fi
+		;; 
+	*) 
+		AC_LIB_FROMPACKAGE([GLEW], [libglew])
+		AC_LIB_HAVE_LINKFLAGS([GLEW], [], [#include <GL/glew.h>], [GLEW_VERSION_2_1])
+		;; 
+	esac
 ])
